force-app/main/default/objects/QTB_Account_Level_Credit_Note_Setting__mdt/QTB_Account_Level_Credit_Note_Setting__mdt.object-meta.xml
<CustomObject>
    <description>GITLAB #15242 - Create Credit Note from Account Level Related List - 1</description>
    <label>QTB Account Level Credit Note Setting</label>
    <pluralLabel>QTB Account Level Credit Note Settings</pluralLabel>
</CustomObject>