force-app/main/default/objects/QTB_Account_Level_Credit_Note_Setting__mdt/fields/QTB_Acc_LegalEntityCntry__c.field-meta.xml
<CustomField>
    <fullName>QTB_Acc_LegalEntityCntry__c</fullName>
    <label>QTB_Acc_LegalEntityCntry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>