force-app/main/default/objects/QTB_Account_Level_Credit_Note_Setting__mdt/fields/QTB_Scan__c.field-meta.xml
<CustomField>
    <fullName>QTB_Scan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTB_Scan</label>
    <type>Checkbox</type>
</CustomField>