force-app/main/default/objects/QTB_Account_Level_Credit_Note_Setting__mdt/fields/QTB_Shred__c.field-meta.xml
<CustomField>
    <fullName>QTB_Shred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTB_Shred</label>
    <type>Checkbox</type>
</CustomField>